--- a/index.html
+++ b/index.html
@@ -6,24 +6,30 @@
     <title>Coolest todo list</title>
     <link rel="stylesheet" href="dist/output.css" />
   </head>
-  <body class="w-screen h-screen bg-blue-950 bg-opacity-75 center">
-    <main class="w-[97vw] h-[95vh] rounded-lg border-2 border-yellow-400 p-4">
-      <header>
-        <pre id="title" class="text-white font-bold">
+  <body class="relative w-screen h-screen">
+    <div
+      id="terminal"
+      class="absolute backdrop-blur-lg bg-blend-multiply inset-0 center bg-term-bg bg-opacity-90"
+    >
+      <main class="w-[97vw] h-[95vh] rounded-lg border-2 border-accent p-4">
+        <header>
+          <pre id="title" class="text-white font-bold">
   __________     ________    ____   ____  ____ 
  /_  __/ __ \   / ____/ /   /  _/  / __ \/ __ \
   / / / / / /  / /   / /    / /   / / / / / / /
  / / / /_/ /  / /___/ /____/ /   / /_/ / /_/ / 
 /_/  \____/   \____/_____/___/  /_____/\____/  
-        </pre>
-        <hr class="border-dashed border-slate-500 border-t-2 mb-4" />
-      </header>
+        </pre
+          >
+          <hr class="border-dashed border-slate-500 border-t-2 mb-4" />
+        </header>
 
-      <!-- PROMPT -->
-      <section>
-        <h3 class="text-white m-2">[greeed@archGreeed ~]$</h3>
-      </section>
-    </main>
-    <script type="module" src="src/js/main.js"></script>
+        <!-- PROMPT -->
+        <section>
+          <h3 class="text-white m-2">[greeed@archGreeed ~]$</h3>
+        </section>
+      </main>
+      <script type="module" src="src/js/main.js"></script>
+    </div>
   </body>
 </html>
